2011-11-13  Glenn Morris  <rgm@gnu.org>

	* INSTALL: Tiny updates for disk space used during installation.

2011-11-05  Eli Zaretskii  <eliz@gnu.org>

	* lib/makefile.w32-in (FRC): New dummy target.
	(TAGS): Depend on FRC.

2011-11-04  Glenn Morris  <rgm@gnu.org>

	* configure.in: Increase minimum GnuTLS version to 2.6.6. (Bug#9929)
	Do not include GnuTLS version info in final summary message.

2011-10-31  Eli Zaretskii  <eliz@gnu.org>

	* config.bat: Use config.in and Makefile.in from src/ and lib/, if
	they exist there, else from autogen/.

	* make-dist (msdos): Add depfiles.bat and inttypes.h.

2011-10-25  Nali Toja  <nalitoja@gmail.com>  (tiny change)

	* configure.in (HAVE_GNU_MAKE): Respect MAKE env-var.  (Bug#9868)

2011-10-24  Paul Eggert  <eggert@cs.ucla.edu>

	* configure.in (LIB_PTHREAD): Prepend -lpthread to LIBS (Bug#9852)
	if the library is found.  Otherwise, later configure-time tests,
	such as the test for pthread_sigmask, generate the wrong results
	on some platforms.  Problem reported for FreeBSD by Nali Toja.

2011-10-20  Paul Eggert  <eggert@cs.ucla.edu>

	Time zone name fixes for non-ASCII locales (Bug#641, Bug#9794)
	* configure.in (AC_STRUCT_TM, AC_STRUCT_TIMEZONE, HAVE_TM_GMTOFF):
	Remove; no longer needed, now that we defer to strftime for time
	zone names.

2011-10-18  Jan Djärv  <jan.h.d@swipnet.se>

	* configure.in (GLIB_REQUIRED, GTK_REQUIRED): Set to 2.10 (Bug#9786).

2011-10-18  Chong Yidong  <cyd@gnu.org>

	* make-dist: Remove Cocoa/Emacs.xcodeproj from distribution.

2011-10-13  Glenn Morris  <rgm@gnu.org>

	* configure.in: Also look for tputs in libcurses.  (Bug#9736)

2011-10-12  Paul Eggert  <eggert@cs.ucla.edu>

	* configure.in: Remove check for -lintl (Bug#9713).
	The check could break 'configure' on GNU/Linux with a (broken) libintl.
	The check was helpful but not essential in Solaris 2.6 (1997),
	and is no longer needed in Solaris 8 (2000).  Solaris 2.6 is
	obsolete -- Sun dropped support for it in 2006 -- and without