@@ -58,9 +58,6 @@ NARROWPROTO
 SEPCHAR
 SYSTEM_TYPE
 
-** Machine specific macros, described in detail in src/m/template.h
-VIRT_ADDR_VARIES
-
 ** Misc macros
 USER_FULL_NAME   If defined, overrides the default pw->pw_gecos for getting at the full user name.  Only MSDOS overrides the default.
 
