@@ -1,3 +1,7 @@
+2011-11-20  Andreas Schwab  <schwab@linux-m68k.org>
+
+	* CPP-DEFINES (VIRT_ADDR_VARIES): Remove.
+
 2011-11-16  Juanma Barranquero  <lekktu@gmail.com>
 
 	* admin.el (manual-dvi): Fix typo.
